rafactoring ticket avis
